; ModuleID = '/home/carl/AnghaBench/numpy/numpy/linalg/lapack_lite/extr_f2c_lapack.c_ilaslr_.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/linalg/lapack_lite/extr_f2c_lapack.c_ilaslr_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ilaslr_.i__ = internal global i32 0, align 4
@ilaslr_.j = internal global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ilaslr_(i32* %0, i32* %1, float* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca float*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store float* %2, float** %7, align 8
  store i32* %3, i32** %8, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %9, align 4
  %15 = load i32, i32* %9, align 4
  %16 = add nsw i32 1, %15
  store i32 %16, i32* %10, align 4
  %17 = load i32, i32* %10, align 4
  %18 = load float*, float** %7, align 8
  %19 = sext i32 %17 to i64
  %20 = sub i64 0, %19
  %21 = getelementptr inbounds float, float* %18, i64 %20
  store float* %21, float** %7, align 8
  %22 = load i32*, i32** %5, align 8
  %23 = load i32, i32* %22, align 4
  %24 = icmp eq i32 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %4
  %26 = load i32*, i32** %5, align 8
  %27 = load i32, i32* %26, align 4
  store i32 %27, i32* %11, align 4
  br label %93

28:                                               ; preds = %4
  %29 = load float*, float** %7, align 8
  %30 = load i32*, i32** %5, align 8
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* %9, align 4
  %33 = add nsw i32 %31, %32
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds float, float* %29, i64 %34
  %36 = load float, float* %35, align 4
  %37 = fcmp une float %36, 0.000000e+00
  br i1 %37, label %51, label %38

38:                                               ; preds = %28
  %39 = load float*, float** %7, align 8
  %40 = load i32*, i32** %5, align 8
  %41 = load i32, i32* %40, align 4
  %42 = load i32*, i32** %6, align 8
  %43 = load i32, i32* %42, align 4
  %44 = load i32, i32* %9, align 4
  %45 = mul nsw i32 %43, %44
  %46 = add nsw i32 %41, %45
  %47 = sext i32 %46 to i64
  %48 = getelementptr inbounds float, float* %39, i64 %47
  %49 = load float, float* %48, align 4
  %50 = fcmp une float %49, 0.000000e+00
  br i1 %50, label %51, label %54

51:                                               ; preds = %38, %28
  %52 = load i32*, i32** %5, align 8
  %53 = load i32, i32* %52, align 4
  store i32 %53, i32* %11, align 4
  br label %92

54:                                               ; preds = %38
  store i32 0, i32* %11, align 4
  %55 = load i32*, i32** %6, align 8
  %56 = load i32, i32* %55, align 4
  store i32 %56, i32* %12, align 4
  store i32 1, i32* @ilaslr_.j, align 4
  br label %57

57:                                               ; preds = %88, %54
  %58 = load i32, i32* @ilaslr_.j, align 4
  %59 = load i32, i32* %12, align 4
  %60 = icmp sle i32 %58, %59
  br i1 %60, label %61, label %91

61:                                               ; preds = %57
  %62 = load i32*, i32** %5, align 8
  %63 = load i32, i32* %62, align 4
  store i32 %63, i32* @ilaslr_.i__, align 4
  br label %64

64:                                               ; preds = %80, %61
  %65 = load i32, i32* @ilaslr_.i__, align 4
  %66 = icmp sge i32 %65, 1
  br i1 %66, label %67, label %83

67:                                               ; preds = %64
  %68 = load float*, float** %7, align 8
  %69 = load i32, i32* @ilaslr_.i__, align 4
  %70 = load i32, i32* @ilaslr_.j, align 4
  %71 = load i32, i32* %9, align 4
  %72 = mul nsw i32 %70, %71
  %73 = add nsw i32 %69, %72
  %74 = sext i32 %73 to i64
  %75 = getelementptr inbounds float, float* %68, i64 %74
  %76 = load float, float* %75, align 4
  %77 = fcmp une float %76, 0.000000e+00
  br i1 %77, label %78, label %79

78:                                               ; preds = %67
  br label %84

79:                                               ; preds = %67
  br label %80

80:                                               ; preds = %79
  %81 = load i32, i32* @ilaslr_.i__, align 4
  %82 = add nsw i32 %81, -1
  store i32 %82, i32* @ilaslr_.i__, align 4
  br label %64

83:                                               ; preds = %64
  br label %84

84:                                               ; preds = %83, %78
  %85 = load i32, i32* %11, align 4
  %86 = load i32, i32* @ilaslr_.i__, align 4
  %87 = call i32 @max(i32 %85, i32 %86)
  store i32 %87, i32* %11, align 4
  br label %88

88:                                               ; preds = %84
  %89 = load i32, i32* @ilaslr_.j, align 4
  %90 = add nsw i32 %89, 1
  store i32 %90, i32* @ilaslr_.j, align 4
  br label %57

91:                                               ; preds = %57
  br label %92

92:                                               ; preds = %91, %51
  br label %93

93:                                               ; preds = %92, %25
  %94 = load i32, i32* %11, align 4
  ret i32 %94
}

declare dso_local i32 @max(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
